Changed MyCard. Updated footer. Added 'Web Scraping' to Acquired skills from Infosoft Group, Inc.

--- a/war/css/rotating-card.css
+++ b/war/css/rotating-card.css
@@ -10,6 +10,7 @@
     left: 50%;
     margin-left: -200px;
     margin-top: 100px;
+    width: 1000px;
 }
 
 /* entire container, keeps perspective */
